FEAT: Update capture carbon plant instance styles

--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -39,7 +39,7 @@
                         <div class="input-group">
                             <input class="form-control search-input" type="text" name="q" placeholder="Search our site">
                             <div class="input-group-append">
-                                <button class="form-control button search-button" type="submit">
+                                <button class="form-control button search-button" type="submit" aria-label="Search">
                                     <span class="icon">
                                         <i class="fas fa-search"></i>
                                     </span>
@@ -67,7 +67,8 @@
                                 {% else %}
                                     <img class="plant-image" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
                                 {% endif %}
-                                <div>{{ plant.common_name }}</div>
+                                <h2 class="plant-instance-name">{{ plant.common_name }}</h2>
+                                <hr>
                                 <span>{{ plant.genus }}</span>
                                 <span>{{ plant.species }}</span>
                                 <div>&#8364; {{ plant.price | calc_vat | floatformat:2 }} inc VAT</div>
