--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,4 +1,4 @@
-<div class="toast align-items-center info" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+<div class="toast align-items-center info" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true">
     <div class="d-flex">
       <div class="toast-body">Info</div>
       <div class="toast-message">{{ message }}</div>
