--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,4 +1,4 @@
-<div class="toast align-items-center warning" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+<div class="toast align-items-center warning" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true">
     <div class="d-flex">
       <div class="toast-body">Warning</div>
       <div class="toast-message">{{ message }}</div>
