FEAT: Update faq list style

--- a/home/templates/home/how_it_works.html
+++ b/home/templates/home/how_it_works.html
@@ -51,7 +51,7 @@
     <div class="content-container">
         <div class="inner-content-container">
             <h2 class="content-header">Wild Facts</h2>
-            <div class="text-content">
+            <div class="text-content faq-list">
                 <ul>
                     <li class="fact-item">
                         The estimated carbon footprint of a person in Ireland is currently approximately 
