--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                             {% if user.is_superuser %}
                                 <li class="nav-item dropdown">
                                     <a class="nav-link" href="#" id="administration-link" role="button" data-bs-toggle="dropdown" aria-expanded="false">Administration</a>
-                                    <ul class="dropdown-menu border-0" aria-labelledby="administration-link">
+                                    <ul id="administration-dropdown-menu" class="dropdown-menu border-0" aria-labelledby="administration-link">
                                         <li><a class="nav-link dropdown-item" href="{% url 'list_plant_records' %}">Plant Records</a></li>
                                         <li><a class="nav-link dropdown-item" href="{% url 'list_plants' %}">Plant Admin</a></li>
                                         <li><a class="nav-link dropdown-item" href="{% url 'location_plants_link' 1 %}">Plant Availability</a></li>
