--- a/static/css/style.css
+++ b/static/css/style.css
@@ -340,7 +340,7 @@ main {
 .page-title-container,
 .image-nav-container {
     /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
-    background: url("/static/images/base_home_index_glade.jpg") no-repeat center center/cover;
+    background: url("/static/images/base_home_index_glade.webp") no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -349,12 +349,12 @@ main {
 
 .about-us-page-title-container {
     /* Image sourced at https://www.pexels.com/photo/close-up-shot-of-a-person-holding-a-plant-5027792/ */
-    background: url("/static/home/images/home_about_us_plug_plant.jpg") no-repeat center center/cover;
+    background: url("/static/home/images/home_about_us_plug_plant.webp") no-repeat center center/cover;
 }
 
 .how-it-works-page-title-container {
     /* Image sourced at https://ecotree.green/en/how-much-co2-does-a-tree-absorb */
-    background: url("/static/home/images/home_how_it_works.jpg") no-repeat center center/cover;
+    background: url("/static/home/images/home_how_it_works.webp") no-repeat center center/cover;
 }
 
 .image-nav-outer-container {
@@ -368,22 +368,22 @@ main {
 
 .carbon-capture-image-nav-container {
     /* Image sourced at https://iowalandcompany.com/jones-county-iowa-80-acres-for-sale/ */
-    background: url("/static/images/carbon_capture_location.jpg") no-repeat center center/cover;
+    background: url("/static/images/carbon_capture_location.webp") no-repeat center center/cover;
 }
 
 .about-us-image-nav-container {
     /* Image sourced at https://www.pexels.com/photo/close-up-shot-of-a-person-holding-a-plant-5027792/ */
-    background: url("/static/home/images/home_about_us_plug_plant.jpg") no-repeat center center/cover;
+    background: url("/static/home/images/home_about_us_plug_plant.webp") no-repeat center center/cover;
 }
 
 .how-it-works-image-nav-container {
     /* Image sourced at https://ecotree.green/en/how-much-co2-does-a-tree-absorb */
-    background: url("/static/home/images/home_how_it_works.jpg") no-repeat center center/cover;
+    background: url("/static/home/images/home_how_it_works.webp") no-repeat center center/cover;
 }
 
 .carbon-capture-title-container {
     /* Image sourced at https://iowalandcompany.com/jones-county-iowa-80-acres-for-sale/ */
-    background: url("/static/images/carbon_capture_location.jpg") no-repeat center center/cover;
+    background: url("/static/images/carbon_capture_location.webp") no-repeat center center/cover;
     height: 175px;
 }
 
@@ -666,7 +666,7 @@ a:hover,
     height: 100vh;
     width: 100vw;
     /* Image sourced at https: //www.pexels.com/photo/green-forest-under-white-sky-during-daytime-165537/ */
-    background: url("/static/images/base_home_index_glade.jpg") no-repeat center center/cover;
+    background: url("/static/images/base_home_index_glade.webp") no-repeat center center/cover;
     z-index: 2;
     top: 0;
     left: 0;
