--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,14 @@
         {% endblock %}
         <!-- js links  -->
         <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous" async></script>
+        <!-- js Libraries -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous" defer></script>
+        <script src="{% static 'js/libraries/jquery_3_7_0/jquery_3_7_0.js' %}" defer></script>
+        <!-- Custom js -->
+        <script src="{% static 'js/wild_carbon/base.js' %}" defer></script>
+        <!-- Stripe js -->
+        <script src="https://js.stripe.com/v3/" defer></script>
     </head>
     <body>
         <header>
@@ -186,15 +194,7 @@
                 </div>
             </section>
         </div>
-        <!-- js Libraries -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-        <script src="{% static 'js/libraries/jquery_3_7_0/jquery_3_7_0.js' %}"></script>
-        <!-- Custom js -->
-        <script src="{% static 'js/wild_carbon/base.js' %}"></script>
         {% block extra_js %}
         {% endblock %}
-        <!-- Stripe js -->
-        <script src="https://js.stripe.com/v3/"></script>
     </body>
 </html>
