--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,6 +1,6 @@
 {% load basket_tools %}
 
-<div class="toast align-items-center success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true">
+<div class="toast align-items-center success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
     <div class="d-flex">
       <div class="toast-body">Success</div>
       <div class="toast-message">{{ message }}</div>
