--- a/static/css/style.css
+++ b/static/css/style.css
@@ -370,7 +370,8 @@ main {
 
 .image-nav-container {
     height: 500px;
-    width: 95%;
+    width: 100%;
+    margin: 0 10px;
 }
 
 .carbon-capture-image-nav-container {
@@ -459,7 +460,7 @@ main {
 }
 
 .inner-content-container {
-    width: 95%;
+    width: 100%;
     background-color: var(--inner-content-container-colour);
     padding: 10px;
     margin: 10px;
@@ -589,7 +590,7 @@ button:focus {
 }
 
 .plant-record-button {
-    margin-bottom: 10px;
+    margin: auto;
     width: fit-content;
     display: flex;
     align-items: center;
