--- a/locations/templates/locations/carbon_capture.html
+++ b/locations/templates/locations/carbon_capture.html
@@ -35,7 +35,7 @@
             <div>
                 <!-- Search box and sort box HTML supplied by Code Institute -->
                 <div class="location-search-input">
-                    <form id="search" class="search-form" method="GET" action="{% url 'carbon_capture' %}">
+                    <form class="search-form" method="GET" action="{% url 'carbon_capture' %}">
                         <div class="input-group">
                             <input class="form-control search-input" type="text" name="q" placeholder="Search our site">
                             <div class="input-group-append">
