--- a/plants/templates/plants/list_plants.html
+++ b/plants/templates/plants/list_plants.html
@@ -9,53 +9,60 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Plants</h1>
-    <a href="{% url 'add_plant' %}">Add Plant</a>
-    <!-- Search box and sort box HTML supplied by Code Institute -->
-    <div>
-        <form method="GET" action="{% url 'list_plants' %}">
-            <div class="input-group w-50">
-                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                <div class="input-group-append">
-                    <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                        <span class="icon">
-                            <i class="fas fa-search"></i>
-                        </span>
-                    </button>
+    <div class="content-container">
+        <div class="inner-content-container">
+            <h2 class="content-header">Plants</h2>
+            <a class="button add-plant-button" href="{% url 'add_plant' %}">Add Plant</a>
+            <!-- Search box and sort box HTML supplied by Code Institute -->
+            <div class="plant-list-search-input">
+                <form class="search-form" method="GET" action="{% url 'list_plants' %}">
+                    <div class="input-group">
+                        <input class="form-control search-input" type="text" name="q" placeholder="Search our site">
+                        <div class="input-group-append">
+                            <button class="form-control button search-button" type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="sort-select-wrapper">
+                <select id="sort-selector" class="custom-select custom-select-sm selector border">
+                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                    <option value="price__asc" {% if current_sorting == 'price__asc' %}selected{% endif %}>Price (low to high)</option>
+                    <option value="price__desc" {% if current_sorting == 'price__desc' %}selected{% endif %}>Price (high to low)</option>
+                    <option value="common_name__asc" {% if current_sorting == 'common_name__asc' %}selected{% endif %}>Name (A-Z)</option>
+                    <option value="common_name__desc" {% if current_sorting == 'common_name__desc' %}selected{% endif %}>Name (Z-A)</option>
+                </select>
+            </div>
+            <!-- End of search box and sort box HTML supplied by Code Institute -->
+            <div class="plant-list-container">
+                <div class="plant-list">
+                    {% for plant in plants %}
+                        <div class="plant-instance">
+                            <div class="plant-instance add-plant-plant-instance">
+                                {% if plant.image %}
+                                    <img class="plant-image" src="{{ plant.image.url }}" alt="{{ plant.common_name }}" loading="lazy">
+                                {% else %}
+                                    <img class="plant-image" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}" loading="lazy">
+                                {% endif %}
+                                <h2 class="plant-instance-name">{{ plant.common_name }}</h2>
+                                <hr>
+                                <span>{{ plant.genus }}</span>
+                                <span>{{ plant.species }}</span>
+                                <div>&#8364; {{ plant.price }} ex VAT</div>
+                                <div>SKU: {{ plant.sku }}</div>
+                                <div class="add-plant-links">
+                                    <a class="link" href="{% url 'edit_plant' plant.id %}">Edit</a> |
+                                    <a class="link" href="{% url 'delete_plant' plant.id %}">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
-        </form>
-    </div>
-    <div class="sort-select-wrapper w-50">
-        <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-            <option value="price__asc" {% if current_sorting == 'price__asc' %}selected{% endif %}>Price (low to high)</option>
-            <option value="price__desc" {% if current_sorting == 'price__desc' %}selected{% endif %}>Price (high to low)</option>
-            <option value="common_name__asc" {% if current_sorting == 'common_name__asc' %}selected{% endif %}>Name (A-Z)</option>
-            <option value="common_name__desc" {% if current_sorting == 'common_name__desc' %}selected{% endif %}>Name (Z-A)</option>
-        </select>
-    </div>
-    <!-- End of search box and sort box HTML supplied by Code Institute -->
-    <div class="plant-list-container">
-        <div class="plant-list">
-            {% for plant in plants %}
-                <div class="plant-instance">
-                    {% if plant.image %}
-                        <img class="plant-image" src="{{ plant.image.url }}" alt="{{ plant.common_name }}">
-                    {% else %}
-                        <img class="plant-image" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
-                    {% endif %}
-                    <div>{{ plant.common_name }}</div>
-                    <span>{{ plant.genus }}</span>
-                    <span>{{ plant.species }}</span>
-                    <div>&#8364 {{ plant.price }} ex VAT</div>
-                    <div>SKU: {{ plant.sku }}</div>
-                    <div>
-                        <a href="{% url 'edit_plant' plant.id %}">Edit</a> |
-                        <a href="{% url 'delete_plant' plant.id %}">Delete</a>
-                    </div>
-                </div>
-            {% endfor %}
         </div>
     </div>
 {% endblock%}
