--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
                         <a class="navbar-brand" href="{% url 'home' %}">
                             <div class="logo-company"><strong>Wild Carbon</strong></div>
                         </a>
-                        <div role="button" aria-label="Privacy-Policy" id="privacy-policy-link" class="privacy-policy">Privacy Policy</div>
+                        <div role="button" aria-label="Privacy-Policy" id="privacy-policy-link" class="privacy-policy link">Privacy Policy</div>
                         <div class="copyright-notice">&copy; 2023 Wild Carbon</div>
                     </div>
                     <div class="footer-right">
