--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -11,10 +11,10 @@
 
 {% block content %}
     <div class="content-container">
-        <div class="inner-content-container">
+        <div class="inner-content-container add-edit-plant-inner-content-container">
             <h1 class="content-header">Update Plant</h1>
-            <div class="row">
-                <div class="col-12 col-md-6">
+            <div class="row add-edit-plant-row">
+                <div class="col-12">
                     <div class="note">Note: leading, trailing and multiple spaces in a row in the common name are removed</div>
                     <form method="POST" action="{% url 'edit_plant' plant.id %}" class="form mb-2" enctype="multipart/form-data">
                         {% csrf_token %}
