FEAT: Update add and edit plant page styles

--- a/plants/templates/plants/add_plant.html
+++ b/plants/templates/plants/add_plant.html
@@ -16,7 +16,7 @@
         <div class="row add-edit-plant-row">
             <div class="col-12">
                 <div class="note">Note: leading, trailing and multiple spaces in a row in the common name are removed</div>
-                <form method="POST" action="{% url 'add_plant' %}" class="form mb-2" enctype="multipart/form-data">
+                <form id="add-plant-form" method="POST" action="{% url 'add_plant' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.name != 'image' %}
@@ -25,11 +25,11 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
-                    <div class="button-container">
-                        <a class="btn button button-content" href="{% url 'list_plants' %}">Back</a>
-                        <button id="plant-submit-btn" class="btn button button-content" type="submit">Add Plant</button>
-                    </div>
                 </form>
+                <div class="button-container">
+                    <a class="btn button button-content" href="{% url 'list_plants' %}">Back</a>
+                    <button id="plant-submit-btn" form="add-plant-form" class="btn button button-content" type="submit">Add Plant</button>
+                </div>
             </div>            
         </div>
     </div>
