--- a/plants/templates/plants/change_plant_state.html
+++ b/plants/templates/plants/change_plant_state.html
@@ -9,21 +9,26 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Change Plant State</h1>
-    <form method="POST" action="{% url 'change_plant_state' record.pk %}" class="form mb-2">
-        {% csrf_token %}
-        {{ form | crispy }}
-        <h2>{{ record.plant.common_name }}</h2>
-        <div>ID: {{ record.plant_number }}</div>
-        <div>Current state: {{ record.plant_state.plant_state_friendly_name }}</div>
-        <div>Moving the plant to the next state cannot be undone.</div>
-        <div>Please tick the box to indicate that you wish to proceed</div>
-        <input type="checkbox" required>
-        <div class="text-right">
-            <a class="btn btn-outline-black rounded-0" href="{% url 'list_plant_records' %}">Back</a>
-            <button id="plant-submit-btn" class="btn btn-black rounded-0" type="submit">Move to {{ record.plant_state.next_plant_state.plant_state_friendly_name }}</button>
+<div class="content-container">
+    <div class="inner-content-container">
+        <h1 class="content-header">Change Plant State</h1>
+        <div class="standard-content">
+            <form id="change-record-state-form" method="POST" action="{% url 'change_plant_state' record.pk %}" class="standard-form">
+                {% csrf_token %}
+                {{ form | crispy }}
+                <h2><u>{{ record.plant.common_name }} ID: {{ record.plant_number }}</u></h2>
+                <div>Current state: <u>{{ record.plant_state.plant_state_friendly_name }}</u></div>
+                <div>Moving the plant to the next state cannot be undone.</div>
+                <div>Please tick the box to indicate that you wish to proceed</div>
+                <input type="checkbox" required>
+            </form>
+            <div class="button-container">
+                <a class="button width-100-button button-content" href="{% url 'list_plant_records' %}">Back</a>
+                <button form="change-record-state-form" id="plant-submit-btn" class="width-100-button button light-button" type="submit">Move to {{ record.plant_state.next_plant_state.plant_state_friendly_name }}</button>
+            </div>
         </div>
-    </form>
+    </div>
+</div>
 {% endblock%}
 
 {% block modal_style %}modal-offset{% endblock %}
