--- a/plants/templates/plants/edit_plant.html
+++ b/plants/templates/plants/edit_plant.html
@@ -13,10 +13,10 @@
     <div class="content-container">
         <div class="inner-content-container add-edit-plant-inner-content-container">
             <h1 class="content-header">Update Plant</h1>
-            <div class="row add-edit-plant-row">
-                <div class="col-12">
+            <div class="add-edit-plant-row">
+                <div>
                     <div class="note">Note: leading, trailing and multiple spaces in a row in the common name are removed</div>
-                    <form id="edit-plant-form" method="POST" action="{% url 'edit_plant' plant.id %}" class="form mb-2" enctype="multipart/form-data">
+                    <form id="edit-plant-form" method="POST" action="{% url 'edit_plant' plant.id %}" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% for field in form %}
                             {% if field.name != 'image' %}
