--- a/static/css/style.css
+++ b/static/css/style.css
@@ -892,6 +892,10 @@ hr {
     margin-bottom: 10px;
 }
 
+.checkbox {
+    accent-color: var(--button-background);
+}
+
 /* Table styles */
 .table {
     color: var(--main-font-colour);
